# contextgraph

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CSV_IMPORT_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MANIFEST.in  PICKLE_SERIALIZATION_SUMMARY.md  PROJECT_STATUS.md  README.md  RELEASE_GUIDE.md  STRING_SEARCH_SUMMARY.md  TEST_SUMMARY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
contextgraph/: __init__.py  csv_importer.py  cypher_parser.py  exceptions.py  graphdb.py  query_result.py  transaction.py  visualization.py
examples/: basic_usage.py  csv_import_example.py  loading_performance_demo.py  performance_comparison.py  pickle_serialization_example.py  social_network.py  string_search_example.py  transaction_example.py  variable_length_paths_example.py  visualization_example.py
sample_data/: companies.csv  employment.csv  friendships.csv  people.csv
scripts/: release.py
tests/: __init__.py  conftest.py  test_advanced_queries.py  test_csv_import.py  test_cypher.py  test_filters_and_joins.py  test_graphdb.py  test_integration.py  test_loading_optimizations.py  test_performance_optimizations.py  test_pickle_serialization.py  test_string_search.py  test_transactions.py  test_variable_length_paths.py  test_visualization.py
